--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -3,7 +3,7 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #1f2937; 
+  background-color: #ffffff; 
   display: flex;
   justify-content: center;
   align-items: center;
